crates/swc_ecma_parser/tests/test262-error-references/fail/27e55098f070e9ef.js.stderr
error: Invalid unicode escape
 --> $DIR/tests/test262-parser/fail/27e55098f070e9ef.js:1:2
  |
1 | "\u{FFFF"
  |  ^^^^^^^

